# SDLCustomGameEngine

./: .gitignore  CMakeLists.txt  Readme.txt  main.cpp  video-guide
engine/: CMakeLists.txt
engine/include/engine/: Circle.h  Engine.h
engine/include/engine/animation/: FadeOutColorAnimation.h
engine/include/engine/utils/: Vec2.h
engine/src/: Circle.cpp  Engine.cpp
engine/src/animation/: FadeOutColorAnimation.cpp
engine/src/utils/: Vec2.cpp
games/: CMakeLists.txt
games/aoe/include/aoe/: Game.h  GameMap.h  Unit.h  UnitMover.h
games/aoe/include/aoe/utils/: BinaryHeap.h
games/aoe/src/aoe/: Game.cpp  GameMap.cpp  Player.cpp  Unit.cpp  UnitMover.cpp
games/doodle_jump/include/: DoodleJumpGame.h  Platform.h  PlatformFactory.h  Player.h
games/doodle_jump/src/: DoodleJumpGame.cpp  Platform.cpp  PlatformFactory.cpp  Player.cpp
games/falling_sand/include/: ActiveParticleManager.h  FallingSandGame.h  Grid.h  Particle.h  ParticleFactory.h  ParticleMover.h  ParticlePlacer.h
games/falling_sand/src/: ActiveParticleManager.cpp  FallingSandGame.cpp  Grid.cpp  Particle.cpp  ParticleFactory.cpp  ParticleMover.cpp  ParticlePlacer.cpp
games/flappy_bird/include/: Bird.h  Constants.h  FlappyBird.h  Pipe.h  PipeFactory.h  PipesPair.h  PipesPairFactory.h  ScoreManager.h
games/flappy_bird/src/: Bird.cpp  FlappyBird.cpp  Pipe.cpp  PipeFactory.cpp  PipesPair.cpp  PipesPairFactory.cpp  ScoreManager.cpp  SnowStorm.cpp
games/include/fireworks/: Firework.h  FireworksGame.h  Particle.h
games/include/fireworks/shape_generator/: ShapeGenerator.h  Shapes.h
games/snake/include/: FoodFactory.h  Snake.h  SnakeGame.h
games/snake/src/: Food.cpp  FoodFactory.cpp  ScreenBoundary.cpp  Snake.cpp  SnakeGame.cpp
games/space_invaders/include/: Alien.h  AlienFactory.h  AlienList.h  Constants.h  DefenseBlock.h  Entity.h  Projectile.h  ProjectileFactory.h  ScoreManager.h  Ship.h  SpaceInvaders.h
games/space_invaders/src/: Alien.cpp  AlienFactory.cpp  AlienList.cpp  DefenseBlock.cpp  Projectile.cpp  ProjectileFactory.cpp  ScoreManager.cpp  Ship.cpp  SpaceInvaders.cpp
games/spark_propagation/include/: Constants.h  Grid.h  SparkPropagation.h
games/spark_propagation/src/: Grid.cpp  SparkPropagation.cpp
games/src/: Firework.cpp  FireworksGame.cpp  Particle.cpp
include/engine/: Engine.h  IGame.h  Rectangle.h  Window.h
include/engine/collision/: ICollidable.h
include/engine/timer/: CountdownTimer.h  Timer.h
include/engine/utils/: Vec2.h
lib/SDL2/: libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib
src/: CMakeLists.txt
src/engine/: Engine.cpp  RandomGenerator.cpp  Rectangle.cpp  SDLImageInitializer.cpp  SDLInitializer.cpp  TextureManager.cpp  Window.cpp
src/engine/collision/: CollisionManager.cpp
src/engine/timer/: CountdownTimer.cpp  Timer.cpp
src/engine/utils/: Vec2.cpp  Vec2.h
